# Medman

./: Cargo.toml  README.adoc  README.md
src/: cli.rs  lib.rs  main.rs  musicfile.rs  scan.rs  search.rs
